--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-    implementation 'info.picocli:picocli:4.7.5'
+    implementation 'org.jcommander:jcommander:1.83'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
     implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
-
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
