--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,16 @@ repositories {
 dependencies {
     implementation 'org.jcommander:jcommander:1.83'
     implementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+    implementation 'org.slf4j:slf4j-nop:2.0.13'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 compileJava {
